@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-06-18T00:57:35Z",
-  "count_outdated" : 491,
-  "uniques_outdated" : 318,
-  "count" : 492,
-  "uniques" : 319,
+  "timestamp" : "2024-08-16T01:00:06Z",
+  "count_outdated" : 492,
+  "uniques_outdated" : 319,
+  "count" : 493,
+  "uniques" : 320,
   "clones" : [
     {
-      "timestamp": "2024-06-14T00:00:00Z",
+      "timestamp": "2024-08-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
